# ISRO-R-DEVKIT

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE.txt  README.md  SRO_DevKit.sln  build.bat  mkdocs.yml  options.cmake
BSLib/: BSLib.cpp  BSLib.h  BSLib.vcxproj  BSLib.vcxproj.filters
ClientLib/: ClientLib.vcxproj  ClientLib.vcxproj.filters
ClientNet/: ClientNet.vcxproj  ClientNet.vcxproj.filters
DevKit_DLL/: DevKit_DLL.vcxproj  DevKit_DLL.vcxproj.filters  DllMain.cpp  GFXVideo3d_Hook.cpp  GFXVideo3d_Hook.h  Hooks.h  IFflorian0.cpp  IFflorian0.h  IFflorian0Guide.cpp  IFflorian0Guide.h  ImGui_Windows.cpp  StdAfx.h  Util.cpp  Util.h  WndProc.cpp
GFX3DFunction/: GFX3DFunction.vcxproj  GFX3DFunction.vcxproj.filters  GFXVideo3d.cpp  GFXVideo3d.h  GFontTexture.cpp  GFontTexture.h
GFXFileManagerLIB/: CJArchiveFm.h  IFileManager.cpp  IFileManager.h  searchresult.h  shit_t.h
NavMesh/: CollisionObject.h  NavEdge.h  NavMesh.vcxproj  NavMesh.vcxproj.filters  RTNavCellTri.h  RTNavEdgeGlobal.h  RTNavEdgeInternal.h  RTNavMesh.h  RTNavMeshObj.h  RTNavMeshTerrain.cpp  (+1 more)
source/: CMakeLists.txt
source/DevKit_DLL/: CMakeLists.txt
source/DevKit_DLL/src/: CGame_Hook.cpp  CGame_Hook.h  DllMain.cpp  FakeWinMain_CPSQuickStart.cpp  Hooks.cpp  Hooks.h  IFflorian0.cpp  IFflorian0.h  ImGui_Windows.cpp  MathUtil.cpp  MathUtil.h  PSQuickStart.cpp  PSQuickStart.h  QuickStart.cpp  QuickStart.h  StdAfx.h  Util.cpp  Util.h  WndProc.cpp
source/DevKit_DLL/src/ImGui_Windows/: Inventory.cpp  Inventory.h
source/DevKit_DLL/src/hooks/: CGame_Hook.cpp  CGame_Hook.h  GFXVideo3d_Hook.cpp  Hooks.cpp  Hooks.h  WndProc_Hook.cpp  WndProc_Hook.h
source/DevKit_DLL/src/imgui_windows/: About.cpp  About.h  CharacterData.cpp  CharacterData.h  EntityExplorer.cpp  EntityExplorer.h  ErrorMessageTool.cpp  ErrorMessageTool.h  ImGui_Windows.cpp  ImGui_Windows.h  InterfaceDebugger.cpp  InterfaceDebugger.h  InterfaceTree.cpp  InterfaceTree.h  Inventory.cpp  NavMeshTool.cpp  NavMeshTool.h  NotificationTool.cpp  NotificationTool.h  PartyInfo.cpp  PartyInfo.h  ProcessViewer.cpp  ProcessViewer.h  SoundTool.cpp  SoundTool.h  SystemMessage.cpp  SystemMessage.h
source/libs/BSLib/: CMakeLists.txt
source/libs/BSLib/src/BSLib/: BSLib.cpp  BSLib.h  Debug.cpp  Debug.h  MsgHandler.cpp  MsgHandler.h  StringCheck.cpp  StringCheck.h  multibyte.cpp  multibyte.h
source/libs/BSLib/src/BSLib/_internal/: MemPoolManager.cpp  MemPoolManager.h  _BSDynamic.h  _BSMsg.h  custom_stl.h
source/libs/BSLib/src/BSLib/memory/: MemPool.h
source/libs/ClientLib/: CMakeLists.txt  ReadMe.txt
source/libs/ClientLib/src/: AlramGuideMgrWnd.cpp  AlramGuideMgrWnd.h  AnimationCallback.h  BufRender.h  CIFSystemMessage.cpp  CIFSystemMessage.h  CObjAnimation.cpp  CObjAnimation.h  CPSMission.cpp  CPSMission.h  CPSTile.cpp  CPSTile.h  CPSVersionCheck.cpp  CPSVersionCheck.h  CameraWorking.cpp  CharacterDependentData.cpp  CharacterDependentData.h  CharacterStatistics.h  ClassLink.h  Client.cpp  Client.h  CompSimple.cpp  CompSimple.h  ETime.h  EntityManagerClient.h  GEffSoundBody.cpp  GEffSoundBody.h  GFXMainFrame.cpp  GFXMainFrame.h  GInterface.cpp  GInterface.h  GObj.h  GWnd.cpp  GWnd.h  GWndBase.cpp  GWndBase.h  Game.cpp  Game.h  GameCfg.cpp  GameCfg.h  (+213 more)
source/libs/ClientLib/src/Data/: ActionWndData.h  CharacterData.cpp  CharacterData.h  DropGoldData.h  GachaItemSetData.h  GachaNpcData.h  GameGuideData.h  ItemData.cpp  ItemData.h  LevelData.h  LevelGoldData.h  MagicOptionData.h  MallItemMenuListData.h  MessageTipData.h  NPCChatData.h  NPCPosData.h  QuestData.h  RefPackageItemData.h  RefPricePolicyOfItem.h  RefScrapOfPackageItemData.h  RefShopTabData.h  RefShopTabGroupData.h  RefShopdata.h  ShopItemStockPeriod.h  ShopItemStockQuantity.h  TeleportBuilding.h  TeleportData.h  TeleportLink.h
source/libs/ClientLib/src/Juicer/: IFTestExample.cpp  IFTestExample.h
source/libs/ClientNet/: CMakeLists.txt
source/libs/ClientNet/src/ClientNet/: ClientNet.cpp  ClientNet.h  IClientNet.h  MsgStreamBuffer.cpp  MsgStreamBuffer.h
source/libs/GFX3DFunction/: CMakeLists.txt
source/libs/GFX3DFunction/src/GFX3DFunction/: Camera.cpp  Camera.h  DrawingHelpers.cpp  DrawingHelpers.h  GFXVideo3d.cpp  GFXVideo3d.h  GFontTexture.cpp  GFontTexture.h  RStateMgr.cpp  RStateMgr.h  TextureRuntime.h
source/libs/GFX3DFunction/src/GFX3DFunction/Common/: SessionInfo.cpp  SessionInfo.h  d3dapp.cpp  d3dapp.h  d3denumeration.cpp  d3denumeration.h  d3dfile.cpp  d3dfont.cpp  d3dfont.h  d3dsaver.cpp  d3dsettings.cpp  d3dutil.cpp  d3dutil.h  ddutil.cpp  didevimg.cpp  didevimg.h  diutil.cpp  dmutil.cpp  dsutil.cpp  dsutil.h  dxutil.cpp  netclient.cpp  netclient.h  netconnect.cpp  netconnect.h  netvoice.cpp  netvoice.h
source/libs/GFXFileManagerLIB/: CMakeLists.txt
source/libs/GFXFileManagerLIB/include/GFXFileManagerLIB/: DialogData.h  IFileManager.h  eCallbackState.h  result_entry_t.h
source/libs/GFXMainFrame/: CMakeLists.txt
source/libs/GFXMainFrame/src/GFXMainFrame/: Camera.h  Controler.cpp  Controler.h  EntityManager.h  GFXMainFrame.cpp  GFXMainFrame.h  GWnd.cpp  GWnd.h  GWndBase.cpp  GWndBase.h  IEntity.h  Process.cpp  Process.h
source/libs/MathHelpers/: CMakeLists.txt
source/libs/MathHelpers/src/MathHelpers/: hsl.cpp  hsl.h
source/libs/NavMesh/: CMakeLists.txt
source/libs/NavMesh/include/NavMesh/: NavEdge.h  ObjectList.h  PrimNavMesh.h  RTNavCell.h  RTNavCellQuad.h  RTNavCellTri.h  RTNavEdge.h  RTNavEdgeGlobal.h  RTNavEdgeInternal.h  RTNavMesh.h  RTNavMeshDungeon.h  RTNavMeshObj.h  RTNavMeshTerrain.h  SNavMeshInst.h  SNavMeshPosition.h  _ICell.h
source/libs/NavMesh/src/: RTNavMeshTerrain.cpp
source/libs/SimpleViewer/: CMakeLists.txt
source/libs/SimpleViewer/include/SimpleViewer/: IVBDynamic.h  IVertexBuffer.h  VBDynamic.h
source/libs/TypeId/: CMakeLists.txt
source/libs/TypeId/include/: TypeId.h  TypeIdBase.h
source/libs/TypeId/src/: TypeIdRegistry.cpp
source/libs/TypeId/test/: TestTypeId.hpp
source/tests/: CMakeLists.txt
source/tests/src/: ClientLib.cpp  ClientLib.h  main.cpp  vc80-stl.cpp  vc80-stl.h
(+85 files in other folders)
