
add_subdirectory(libs/BSLib)
add_subdirectory(libs/ClientNet)
add_subdirectory(libs/ClientLib)
add_subdirectory(libs/GFX3DFunction)
add_subdirectory(libs/GFXFileManagerLIB)
add_subdirectory(libs/GFXMainFrame)
add_subdirectory(libs/NavMesh)

add_subdirectory(tests)


add_subdirectory(third-party/remodel)
add_subdirectory(third-party/memory)
add_subdirectory(third-party/imgui)
add_subdirectory(third-party/abi-testing)
add_subdirectory(third-party/ghidra)

add_subdirectory(DevKit_DLL)
